tests/errors/block_argument_missing.dang
# Test: Missing block argument when required

numbers: [Int!]! = [1, 2, 3]

# ERROR: function requires a block argument
result: [Int!]! = numbers.map
